# BleedRate

./: .env.example  .gitignore  .pre-commit-config.yaml  ALCOHOL_TAX_ANALYSIS.md  ALCOHOL_TAX_COMPARISON.md  ALCOHOL_TAX_FIX.md  DEPLOYMENT_SETUP_COMPLETE.md  Dockerfile  Makefile  NATIONAL_TREASURY_2024_UPDATE.md  QUICKSTART_DEPLOYMENT.md  README.md  TOOLTIP_IMPLEMENTATION.md  build.ps1  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.sh
.github/workflows/: test.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py  routes_admin.py  routes_public.py  schemas.py
app/domain/: __init__.py  calculators.py  engine.py  profiles.py  rates.py
app/services/: logger.py
app/static/css/: .gitkeep
app/static/images/: README.md
app/templates/: _ad_unit.html  _breakdown_table.html  _kofi_button.html  _legalwills_banner.html  _share_buttons.html  admin_rates.html  base.html  index.html  index_old.html  results.html
app/views/: __init__.py  pages.py
data/: tax_rates.yml
db/: models.py  session.py
docs/: ADSENSE_SETUP.md  AD_BLOCKER_BYPASS.md  BUTTON_COLOR_OPTIMIZATION.md  DEPLOYMENT_WORKFLOW.md  ENHANCED_ANALYTICS.md  LOGGING_QUICKSTART.md  RAILWAY_DEPLOYMENT.md  SUPABASE_SETUP.md  TESTING_GUIDE.md  TOOLTIPS.md  TOOLTIP_IMPLEMENTATION_v2.md  tooltip_demo.html
scripts/: supabase_setup.sql
tests/: conftest.py  test_alcohol_tax.py  test_api_public.py  test_embedded_corporate_tax.py  test_engine.py  test_rates.py  test_tobacco_tax.py  test_vehicle_import_duty.py
